apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: adguard
      app.kubernetes.io/part-of: adguard
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: adguard
        app.kubernetes.io/part-of: adguard
    spec:
      dnsPolicy: Default
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http-setup
              containerPort: 3000
              protocol: TCP
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/conf
              subPath: conf
            - name: data
              mountPath: /opt/adguardhome/work
              subPath: work
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adguard-data
