apps/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
spec:
  type: LoadBalancer
  clusterIP: 10.43.15.186
  selector:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
